Separa GUI do core e cria primeira versão do android